# ThermaSched

./: CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
calibration/: step_response.py  verify_params.py
data/measurements/: thermal_params.csv
data/models/: model_manifest.json
docs/: calibration_guide.md  hardware_setup.md
experiments/: ambient_sweep.py  run_benchmark.py
hardware/vivado_constraints/: tile_pblocks.xdc
scripts/: generate_tables.py
simpy_simulation/: thermasched_sim.py
src/buffer/: weight_buffer.c
src/dvfs/: dvfs_ctrl.c
src/noc/: noc_model.c
src/scheduler/: thermasched.c  thermasched.h
src/thermal/: thermal_model.c  thermal_model.h
tests/: test_thermal_model.py
